@@ -49,8 +49,33 @@ class tx_icslibnavitia_ConstantEditorControls {
 		}
 		return $this->displayOptions($fieldName, $aname, $values, $selected, $size);
 	}
+	/**
+	 * Create a select control with the Line list queried for NAViTiA.
+	 * Additional parameters in constant definition:
+	 * - url: The path to the constant containing the NAViTiA URL.
+	 * - login: The path to the constant containing the NAViTiA stat identifier.
+	 * - networks: The path to the constant containing the Network identifier list. (optional)
+	 * - size: Size of the selector box. 1=dropdown; -1=adjust, multiselect; >1=max size, multiselect.
+	 */
+	public function selectLineControl($constantInfo, $ceditor) {
+		$result = $this->selectCommonControl($constantInfo, $ceditor, array($networks => false));
+		if (!is_array($result))
+			return $result;
+		list($constantName, $fieldName, $aname, $selected, $url, $login, $size) = $result;// TODO
+		$dataProvider = t3lib_div::makeInstance('tx_icslibnavitia_APIService', $url, $login);
+		$modeTypes = $dataProvider->getModeTypeList();
+		if ($modeTypes == null)
+			return $this->fallbackControl($fieldName, $selected, $aname) . $this->errorControl($constantInfo, $this->getLL('error_unavailable'));
+		$values = array(
+			'' => '',
+		);
+		for ($i = 0; $i < $modeTypes->Count(); $i++) {
+			$values[$modeTypes->Get($i)->externalCode] = $modeTypes->Get($i)->name;
+		}
+		return $this->displayOptions($fieldName, $aname, $values, $selected, $size);
+	}
 	
-	protected function selectCommonControl($constantInfo, $ceditor) {
+	protected function selectCommonControl($constantInfo, $ceditor, $additionals = array()) {
 		if (!preg_match('/^data\\[(.+)\\]$/', $constantInfo['fieldName'], $match))
 			return $this->errorControl($constantInfo, $this->getLL('error_constantname'));
 		$constantName = $match[1];
@@ -63,6 +88,7 @@ class tx_icslibnavitia_ConstantEditorControls {
 		$url = '';
 		$login = '';
 		$size = 1;
+		$others = array();
 		if (isset($parameters['url']))
 			$url = $GLOBALS['tmpl']->flatSetup[$parameters['url']];
 		if (isset($parameters['login']))
@@ -73,7 +99,13 @@ class tx_icslibnavitia_ConstantEditorControls {
 			$size = 1;
 		if (empty($url))
 			return $this->fallbackControl($fieldName, $selected, $aname) . $this->errorControl($constantInfo, $this->getLL('error_navitiaurl'));
-		return array($constantName, $fieldName, $aname, $selected, $url, $login, $size);
+		foreach ($additionals as $name => $required) {
+			if (isset($parameters[$name])) {
+				$others[$name] = $GLOBALS['tmpl']->flatSetup[$parameters[$name]];
+			}
+			// Required error.
+		}
+		return array($constantName, $fieldName, $aname, $selected, $url, $login, $size, $others);
 	}
 	
 	protected function readCustomParameters($constantComment) {
